--- a/src/main/resources/templates/index.html
+++ b/src/main/resources/templates/index.html
@@ -11,33 +11,6 @@
 
 </head>
 <body>
-<section class="container-fluid">
-  <a href="/" class="btn btn-primary">Home Page</a>
-  <div class="row justify-content-center py-5">
-    <div class="col-6 rounded-3 my-form-container">
-      <h3 class="text-center my-5 text-secondary">Log In</h3>
-      <form method="post" th:action="@{/login}" class="px-md-2">
-        <div class="form-outline mb-4">
-          <label class="form-label">Username</label>
-          <input th:name="username" type="text" id="username" class="form-control"
-                 placeholder="Username"/>
-        </div>
-
-        <div class="form-outline mb-4">
-          <label class="form-label">Password</label>
-          <input th:name="password" type="password" id="password" class="form-control"
-                 placeholder="Password"/>
-        </div>
-
-        <div>
-          <div>
-            <button type="submit" class="btn btn-success btn-lg mb-1">Log In</button>
-          </div>
-        </div>
-      </form>
-    </div>
-
-  </div>
-</section>
+  <h1>hello world</h1>
 </body>
 </html>
